<resources>
    <string name="app_name">Melody</string>
    <string name="now_playing">Now Playing</string>
    <string name="play_button">Play Button</string>
    <string name="songs">songs</string>
    <string name="artists">Artists</string>
    <string name="album_art">Album Art</string>
    <string name="song_name">Song Name</string>
    <string name="artist">Artist</string>
    <string name="previous_track">Previous Track</string>
    <string name="next_track">Next Track</string>
    <string name="select_song">Select a song to play</string>

</resources>
