<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/songs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/song"
        android:gravity="start|bottom"
        android:text="@string/songs"
        android:textSize="@dimen/main_title_size"
        android:textStyle="bold" />
    <Button
        android:id="@+id/artists"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/songs"
        android:background="@drawable/artist"
        android:gravity="start|bottom"
        android:text="@string/artists"
        android:textSize="@dimen/main_title_size"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/playbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/playbar_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/playBar_color"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="@dimen/text_padding"
            android:text="@string/now_playing"
            android:typeface="sans" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/previous_track"
            android:src="@drawable/icons8_rewind_64" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/play_button"
            android:src="@drawable/icons8_play_64" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/next_track"
            android:src="@drawable/icons8_fast_forward_64" />
    </LinearLayout>
</RelativeLayout>