<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/now_playing_back">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/vinyl"
        android:id="@+id/albumart"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/album_art"/>
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/albumart"
        android:id="@+id/songseekbar"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/song_name"
        android:layout_below="@id/songseekbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/songname"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/now_playing_text_color"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/artist"
        android:layout_below="@id/songname"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/now_playing_text_color"
        android:id="@+id/artistname"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icons8_play_64"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:id="@+id/play"
        android:contentDescription="@string/play_button"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icons8_rewind_64"
        android:id="@+id/previous"
        android:layout_toLeftOf="@id/play"
        android:layout_toStartOf="@id/play"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/previous_track"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icons8_fast_forward_64"
        android:id="@+id/next"
        android:layout_toRightOf="@id/play"
        android:layout_toEndOf="@id/play"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/next_track"/>

</RelativeLayout>